--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,70 +1,83 @@
-/**
-* Copyright 2015 IBM Corp.
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-* http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
-*/
-
 body {
-    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
-    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-	margin: 0;
-	font-family: sans-serif;
-	background-color: #ccc;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: auto;
+}
+body, p, div{
+  margin: 0;
+}
+p {
+  padding-right: 5px;
 }
 
-#header {
-	text-align: center;
-	background-color: #1D4D90;
-	color: #F9FAFB;
-	font-size: 16px;
-	height: 38px;
-	line-height: 38px;
-	border-bottom: 1px solid white;
-	position: fixed;
-	width: 100%;
+.statusblock {
+  position: fixed;
+  bottom: 10%;
+  right: 7%;
+  float: right;
+  clear: both;
+  height: 60px;
+  width: 160px;
 }
 
-#wrapper {
-	margin: auto;
-	padding-top: 38px;
+.version_label {
+  font-weight: bold;
+  background-color:#FFFFFF;
+}
+#app_version {
+  padding-left: 2px;
 }
 
-h1 {
-	margin: 0;
-	font-size: 18px;
-	font-family: inherit;
+#mobilefirst {
+  display:none;
+  width: 160px;
 }
 
-#itemsList {
-	padding: 0;
-	margin: 0;
-	margin-top: 5px;
+.mobilefirst_label {
+  text-transform: none;
+  background-color:#00B2EF;
+  color:#FFFFFF;
+  margin-bottom: 20px;
+  margin-top: 2px;
 }
 
-#itemsList li {
-	border-bottom: 1px solid #bbb;
-	min-height: 40px;
-	padding: 10px;
-	cursor: pointer;
+.blink {
+    animation:fade 3000ms infinite;
+    -webkit-animation:fade 3000ms infinite;
+    -moz-animation:fade 3000ms infinite;
 }
-
-#itemsList li .pubDate {
-	color: #555;
-	font-size: 10px;
-	font-family: Arial;
+@-webkit-keyframes fade {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
 }
-
-#itemsList li:hover {
-	background-color: #EFEFEF;
+@keyframes fade {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
+}
+.event {
+    color:#FFFFFF;
+}
+.listening {
+    background-color:#333333;
+    display:block;
+}
+.received {
+    background-color:#4B946A;
+    display:none;
+}
+/* Landscape layout (with min-width) */
+@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
+  body {
+    background: url(../img/bg-landscape.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    max-height: 400px;
+  }
 }
